avniproject/avni-webapp#1754 | Cleanup: remove dead S3FileDoesNotExist, flatten findChanges, tidy tests
Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>