@@ -144,13 +144,13 @@ public class ColumnMetadata extends Model {
         if (!getName().equals(oldColumnMetadata.getName())) {
             return List.of(new RenameColumn(newTable.getName(), oldColumnMetadata.getName(), getName()));
         }
-        if (!getType().equals(oldColumnMetadata.getType())) {
-            if (conceptUuid == null) {
-                return List.of(new AlterColumnType(newTable.getName(), getName(), getType()));
-            }
-            throw new RuntimeException(String.format("Change in datatype detected. Table: %s, Column: %s, Old Type: %s, New Type: %s", newTable.getName(), getName(), getType(), oldColumnMetadata.getType()));
+        if (getType().equals(oldColumnMetadata.getType())) {
+            return Collections.emptyList();
         }
-        return Collections.emptyList();
+        if (conceptUuid == null) {
+            return List.of(new AlterColumnType(newTable.getName(), getName(), getType()));
+        }
+        throw new RuntimeException(String.format("Change in datatype detected. Table: %s, Column: %s, Old Type: %s, New Type: %s", newTable.getName(), getName(), getType(), oldColumnMetadata.getType()));
     }
 
     public void mergeWith(ColumnMetadata oldColumnMetadata) {
